--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,130 +4,54 @@ name: 360T7
 on:
   workflow_dispatch:
     inputs:
-      manual:
-        description: '手动触发一次编译'
-
-permissions:
-  contents: write
-
-env:
-  REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
-  REPO_BRANCH: openwrt-21.02
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: main.config
-  DIY_P1_SH: diy.sh
-  DIY_P2_SH: diy2.sh
-  UPLOAD_FIRMWARE: true
-  UPLOAD_RELEASE: true
-  TZ: Asia/Shanghai
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
-    - name: 检查项目分支
-      uses: actions/checkout@main
+      - uses: actions/checkout@v4
 
-    - name: 初始化编译环境
-      env:
-        DEBIAN_FRONTEND: noninteractive
-      run: |
-        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
-        sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
-        sudo timedatectl set-timezone "$TZ"
-        sudo mkdir -p /workdir
-        sudo chown $USER:$GROUPS /workdir
-        echo "FIRMWARE_VERSION=$(date +"%y%m%d")" >> $GITHUB_ENV
-        echo "START_DATE=$(date +'%Y年%m月%d日 %H点%M分%S秒')" >> $GITHUB_ENV
+      - name: environment
+        run: |
+          sudo apt-get update
+          sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
 
-    - name: 下载源码
-      working-directory: /workdir
-      run: |
-        df -hT $PWD
-        git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git openwrt
-        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+      - name: Download
+        run: |
+          git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
+          cd immortalwrt-mt798x
 
-    - name: 加载软件源
-      run: |
-        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
-        chmod +x $DIY_P1_SH
-        cd openwrt
-        $GITHUB_WORKSPACE/$DIY_P1_SH
+      - name: update
+        run: |
+          cd immortalwrt-mt798x
+          ./scripts/feeds update -a
 
-    - name: 更新软件源
-      run: cd openwrt && ./scripts/feeds update -a
+      - name: install
+        run: |
+          cd immortalwrt-mt798x
+          ./scripts/feeds install -a
 
-    - name: 安装软件源
-      run: cd openwrt && ./scripts/feeds install -a
+      - name: build
+        run: |
+          cd immortalwrt-mt798x
+          sed -i 's/192.168.1.1/192.168.2.1/g' package/base-files/files/bin/config_generate
+          cp -f defconfig/mt7981-ax3000.config .config
+          make V=s -j$(nproc)
 
-    - name: 加载自定义配置
-      run: |
-        [ -e files ] && mv files openwrt/files
-        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x $DIY_P2_SH
-        cd openwrt
-        $GITHUB_WORKSPACE/$DIY_P2_SH
+      - name: Organize
+        run: |
+          cd immortalwrt-mt798x/bin/targets/*/*
+          rm -rf packages
+          rm -rf version.buildinfo
+          rm -rf profiles.json
+          rm -rf *rootfs*
+          rm -rf *kernel*
+          rm -rf *.manifest
+          rm -rf sha256sums
 
-    - name: 下载包
-      id: package
-      run: |
-        cd openwrt
-        make defconfig
-        make download -j8
-        find dl -size -1024c -exec ls -l {} \;
-        find dl -size -1024c -exec rm -f {} \;
-
-    - name: 编译固件
-      id: compile
-      run: |
-        cd openwrt
-        echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s
-        echo "status=success" >> $GITHUB_OUTPUT
-
-    - name: 整理固件
-      id: organize
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true' && !cancelled()
-      run: |
-        # 整理固件包时候,删除您不想要的固件或者文件,让它不需要上传到Actions空间
-        cd openwrt/bin/targets/*/*
-        rm -rf packages
-        rm -rf version.buildinfo
-        rm -rf profiles.json
-        rm -rf *rootfs*
-        rm -rf *kernel*
-        rm -rf *.manifest
-        rm -rf sha256sums
-        mv *sysupgrade.bin ${{ env.FIRMWARE_VERSION }}-360T7-108M-sysupgrade.bin
-        mv *factory.bin ${{ env.FIRMWARE_VERSION }}-360T7-108M-factory.bin
-        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "status=success" >> $GITHUB_OUTPUT
-
-    - name: 上传固件到Github Action空间
-      uses: actions/upload-artifact@main
-      if: steps.organize.outputs.status == 'success' && !cancelled()
-      with:
-        name: ${{ env.FIRMWARE_VERSION }}-360T7
-        path: ${{ env.FIRMWARE }}
-
-    - name: 创建release标签
-      id: tag
-      if: steps.organize.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true' && !cancelled()
-      run: |
-        release_tag="${{ env.FIRMWARE_VERSION }}-360T7"
-        echo "编译时间：$(date +'%Y年%m月%d日 %H点%M分')" >> release.txt
-        echo "默认网关：192.168.2.1" >> release.txt
-        echo "release_tag=$release_tag" >> $GITHUB_OUTPUT
-        echo "status=success" >> $GITHUB_OUTPUT
-
-    - name: 将固件上传到release
-      uses: softprops/action-gh-release@v1
-      if: steps.tag.outputs.status == 'success' && !cancelled()
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        name: ${{ env.FIRMWARE_VERSION }}-360T7
-        tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: release.txt
-        files: ${{ env.FIRMWARE }}/*
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: 360T7
+          path: immortalwrt-mt798x/**/*.sysupgrade.bin
