--- a/.github/workflows/menuconfig.yml
+++ b/.github/workflows/menuconfig.yml
@@ -24,7 +24,7 @@ jobs:
           ./scripts/feeds install -a
           cp -f defconfig/mt7981-ax3000.config .config
 
-      - name: Setup tmate session 步骤：输入q然后执行cd immortalwrt-mt798x && make menuconfig最后执行sudo touch /continue结束 # https://github.com/mxschmitt/action-tmate https://github.com/marketplace/actions/debugging-with-ssh
+      - name: Setup tmate session 步骤：【输入q 命令cd immortalwrt-mt798x && make menuconfig 结束运行sudo touch /continue】 # https://github.com/mxschmitt/action-tmate https://github.com/marketplace/actions/debugging-with-ssh
         uses: mxschmitt/action-tmate@v3
         timeout-minutes: 20
 
