--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,6 @@ on:
   workflow_dispatch:
     inputs:
 
-env:
-  CONFIG_FILE: main.config
-
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -39,7 +36,7 @@ jobs:
         run: |
           cd immortalwrt-mt798x
           sed -i 's/192.168.1.1/192.168.2.1/g' package/base-files/files/bin/config_generate
-          cp -f $CONFIG_FILE .config
+          cp -f $GITHUB_WORKSPACE/main.config .config
           make V=s -j$(nproc)
 
       - name: Organize
