--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,4 +41,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: 360T7
-          path: immortalwrt-mt798x/bin/targets/*/*.sysupgrade.bin
+          path: immortalwrt-mt798x/bin/targets/*.sysupgrade.bin
