--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,20 @@ jobs:
           cp -f $GITHUB_WORKSPACE/main.config .config
           make V=s -j$(nproc)
 
+      - name: organize
+        run: |
+        # 整理固件包时候,删除您不想要的固件或者文件,让它不需要上传到Actions空间
+          cd immortalwrt-mt798x/bin/targets/*/*
+          rm -rf packages
+          rm -rf version.buildinfo
+          rm -rf profiles.json
+          rm -rf *rootfs*
+          rm -rf *kernel*
+          rm -rf *.manifest
+          rm -rf sha256sums
+
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: 360T7
+          name: mt798x
           path: immortalwrt-mt798x/bin/targets/*.sysupgrade.bin
