--- a/.github/workflows/buildPW.yml
+++ b/.github/workflows/buildPW.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: environment
         run: |
-          sudo apt-get update
+          sudo -E apt-get -qq update
           sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
 
       - name: Download
