--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,8 @@ jobs:
       - name: build
         run: |
           cd immortalwrt-mt798x
-          sed -i 's/192.168.1.1/192.168.2.1/g' package/base-files/files/bin/config_generate
+          sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
+          sed -i 's/immortalwrt/Router/g' package/base-files/files/bin/config_generate
           cp -f $GITHUB_WORKSPACE/main.config .config
           make V=s -j$(nproc)
 
