--- a/.github/workflows/menuconfigPW.yml
+++ b/.github/workflows/menuconfigPW.yml
@@ -13,11 +13,9 @@ jobs:
 
       - name: install
         run: |
-          sudo -E apt-get -qq update
+          sudo apt-get update
           sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
-          sudo -E apt-get -qq install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget
-          sudo -E apt-get -qq autoremove --purge
-          sudo -E apt-get -qq clean
+          sudo apt-get install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget
 
       - name: Download file
         run: |
