--- a/.github/workflows/menuconfigPW.yml
+++ b/.github/workflows/menuconfigPW.yml
@@ -12,10 +12,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: install
-        run: |
-          sudo apt-get update
-          sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
-          sudo apt-get install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget
+        run: sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
 
       - name: Download file
         run: |
