--- a/.github/workflows/menuconfigpw.yml
+++ b/.github/workflows/menuconfigpw.yml
@@ -1,4 +1,4 @@
-name: menuconfigPW
+name: menuconfigpw
 
 on:
   workflow_dispatch:
@@ -13,7 +13,8 @@ jobs:
 
       - name: install
         run: |
-         sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
+          sudo apt-get update
+          sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
 
       - name: Download file
         run: |
