--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,14 +6,14 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
       - name: environment
         run: |
-          sudo -E apt-get -qq update
+          sudo apt-get update
           sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
 
       - name: Download
@@ -33,8 +33,7 @@ jobs:
       - name: build
         run: |
           cd immortalwrt-mt798x
-          sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
-          sed -i 's/immortalwrt/Router/g' package/base-files/files/bin/config_generate
+          sed -i 's/192.168.1.1/192.168.2.1/g' package/base-files/files/bin/config_generate
           cp -f $GITHUB_WORKSPACE/main.config .config
           make V=s -j$(nproc)
 
