Update and rename buildPW.yml to buildpw.yml

--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -14,7 +14,7 @@ jobs:
       - name: environment
         run: |
           sudo -E apt-get -qq update
-          sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
+          sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.org/init_build_environment.sh)'
 
       - name: Download
         run: |
