--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           cd immortalwrt-mt798x
           ./scripts/feeds update -a
+          git clone -b master --single-branch https://github.com/immortalwrt/packages.git packages_master && rm -rf ./feeds/packages/lang/golang && mv ./packages_master/lang/golang ./feeds/packages/lang && rm -rf ./packages_master
 
       - name: install
         run: |
@@ -33,8 +34,14 @@ jobs:
       - name: build
         run: |
           cd immortalwrt-mt798x
-          sed -i 's/192.168.1.1/192.168.2.1/g' package/base-files/files/bin/config_generate
-          cp -f $GITHUB_WORKSPACE/main.config .config
+          sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
+          sed -i 's/immortalwrt/Router/g' package/base-files/files/bin/config_generate
+          cp -f $GITHUB_WORKSPACE/mini.config .config
+          rm -rf feeds/luci/applications/luci-app-passwall/
+          rm -rf feeds/packages/net/xray-core/
+          rm -rf feeds/packages/net/xray-plugin/
+          git clone https://github.com/xiaorouji/openwrt-passwall package/luci-app-passwall
+          git clone https://github.com/xiaorouji/openwrt-passwall-packages package/luci-app-passwall-packages
           make V=s -j$(nproc)
 
       - name: Upload
