--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -6,25 +6,38 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
       - name: environment
         run: |
-          sudo -E apt-get -qq update
-          sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.org/init_build_environment.sh)'
+          sudo apt update -y
+          sudo apt full-upgrade -y
+          sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+          bzip2 ccache clang cmake cpio curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib \
+          g++-multilib git gnutls-dev gperf haveged help2man intltool lib32gcc-s1 libc6-dev-i386 libelf-dev \
+          libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5 \
+          libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lld llvm lrzsz mkisofs msmtp \
+          nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip python3-ply \
+          python3-docutils python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig \
+          texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev g++ python3-distutils file
 
       - name: Download
         run: |
-          git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
+          git clone -b openwrt-21.02 --single-branch --filter=blob:none https://github.com/hanwckf/immortalwrt-mt798x.git
 
       - name: update
         run: |
           cd immortalwrt-mt798x
           ./scripts/feeds update -a
-          git clone -b master --single-branch https://github.com/immortalwrt/packages.git packages_master && rm -rf ./feeds/packages/lang/golang && mv ./packages_master/lang/golang ./feeds/packages/lang && rm -rf ./packages_master
+
+      - name: golang
+        run: |
+          cd immortalwrt-mt798x
+          rm -rf feeds/packages/lang/golang
+          git clone -b 22.x https://github.com/sbwml/packages_lang_golang feeds/packages/lang/golang
 
       - name: install
         run: |
@@ -36,13 +49,13 @@ jobs:
           cd immortalwrt-mt798x
           sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
           sed -i 's/immortalwrt/Router/g' package/base-files/files/bin/config_generate
-          cp -f $GITHUB_WORKSPACE/mini.config .config
+          cp -f $GITHUB_WORKSPACE/pw.config .config
           rm -rf feeds/luci/applications/luci-app-passwall/
           rm -rf feeds/packages/net/xray-core/
           rm -rf feeds/packages/net/xray-plugin/
-          git clone https://github.com/xiaorouji/openwrt-passwall package/luci-app-passwall
-          git clone https://github.com/xiaorouji/openwrt-passwall-packages package/luci-app-passwall-packages
-          make V=s -j$(nproc)
+          git clone -b luci-smartdns-dev --single-branch --filter=blob:none https://github.com/xiaorouji/openwrt-passwall.git package/openwrt-passwall
+          git clone -b main --single-branch --filter=blob:none https://github.com/xiaorouji/openwrt-passwall-packages.git package/openwrt-passwall-packages
+          make -j$(nproc)
 
       - name: Upload
         uses: actions/upload-artifact@v2
