--- a/.github/workflows/menuconfigpw.yml
+++ b/.github/workflows/menuconfigpw.yml
@@ -6,29 +6,45 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: install
+      - name: environment
         run: |
-          sudo apt-get update
-          sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.org/init_build_environment.sh)'
+          sudo apt update -y
+          sudo apt full-upgrade -y
+          sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+          bzip2 ccache clang cmake cpio curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib \
+          g++-multilib git gnutls-dev gperf haveged help2man intltool lib32gcc-s1 libc6-dev-i386 libelf-dev \
+          libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5 \
+          libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lld llvm lrzsz mkisofs msmtp \
+          nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip python3-ply \
+          python3-docutils python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig \
+          texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev g++ python3-distutils file
 
-      - name: Download file
+      - name: Download
         run: |
-          git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
+          git clone -b openwrt-21.02 --single-branch --filter=blob:none https://github.com/hanwckf/immortalwrt-mt798x.git
+
+      - name: update
+        run: |
           cd immortalwrt-mt798x
           ./scripts/feeds update -a
-          cd immortalwrt-mt798x && git clone -b master --single-branch https://github.com/immortalwrt/packages.git packages_master && rm -rf ./feeds/packages/lang/golang && mv ./packages_master/lang/golang ./feeds/packages/lang && rm -rf ./packages_master
+
+      - name: golang
+        run: |
+          cd immortalwrt-mt798x
+          rm -rf feeds/packages/lang/golang
+          git clone -b 22.x https://github.com/sbwml/packages_lang_golang feeds/packages/lang/golang
           ./scripts/feeds install -a
           cp -f defconfig/mt7981-ax3000.config .config
           rm -rf feeds/luci/applications/luci-app-passwall/
           rm -rf feeds/packages/net/xray-core/
           rm -rf feeds/packages/net/xray-plugin/
-          git clone https://github.com/xiaorouji/openwrt-passwall package/luci-app-passwall
-          git clone https://github.com/xiaorouji/openwrt-passwall-packages package/luci-app-passwall-packages
+          git clone -b luci-smartdns-dev --single-branch --filter=blob:none https://github.com/xiaorouji/openwrt-passwall.git openwrt-passwall
+          git clone -b main --single-branch --filter=blob:none https://github.com/xiaorouji/openwrt-passwall-packages.git package/openwrt-passwall-packages
 
       - name: Setup tmate session 步骤：【输入q 命令cd immortalwrt-mt798x && make menuconfig 结束运行sudo touch /continue】 # https://github.com/mxschmitt/action-tmate https://github.com/marketplace/actions/debugging-with-ssh
         uses: mxschmitt/action-tmate@v3
