--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -26,36 +26,32 @@ jobs:
 
       - name: Download
         run: |
-          git clone -b openwrt-21.02 --single-branch --filter=blob:none https://github.com/hanwckf/immortalwrt-mt798x.git
+          git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
 
       - name: update
         run: |
           cd immortalwrt-mt798x
           ./scripts/feeds update -a
 
-      - name: golang
-        run: |
-          cd immortalwrt-mt798x
-          rm -rf feeds/packages/lang/golang
-          git clone -b 22.x https://github.com/sbwml/packages_lang_golang feeds/packages/lang/golang
-
       - name: install
         run: |
           cd immortalwrt-mt798x
           ./scripts/feeds install -a
 
+      - name: passwall
+        run: |
+          cd immortalwrt-mt798x
+          git clone -b luci-smartdns-dev https://github.com/xiaorouji/openwrt-passwall openwrt-passwall
+          rm -rf ./feeds/luci/applications/luci-app-passwall
+          mv ./openwrt-passwall/luci-app-passwall ./feeds/luci/applications/luci-app-passwall
+          rm -rf ./openwrt-passwall
+
       - name: build
         run: |
           cd immortalwrt-mt798x
           sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
-          sed -i 's/immortalwrt/Router/g' package/base-files/files/bin/config_generate
           cp -f $GITHUB_WORKSPACE/pw.config .config
-          rm -rf feeds/luci/applications/luci-app-passwall/
-          rm -rf feeds/packages/net/xray-core/
-          rm -rf feeds/packages/net/xray-plugin/
-          git clone -b luci-smartdns-dev --single-branch --filter=blob:none https://github.com/xiaorouji/openwrt-passwall.git package/openwrt-passwall
-          git clone -b main --single-branch --filter=blob:none https://github.com/xiaorouji/openwrt-passwall-packages.git package/openwrt-passwall-packages
-          make -j$(nproc)
+          make V=s -j$(nproc)
 
       - name: Upload
         uses: actions/upload-artifact@v2
