--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -32,11 +32,16 @@ jobs:
         run: |
           cd immortalwrt-mt798x
           ./scripts/feeds update -a
+          rm -rf ./package/network/utils/iptables/Makefile
+          echo $GITHUB_WORKSPACE
+          mv $GITHUB_WORKSPACE/Makefile package/network/utils/iptables/Makefile
 
       - name: install
         run: |
           cd immortalwrt-mt798x
           ./scripts/feeds install -a
+          rm -rf ./package/network/utils/iptables/Makefile
+          mv $GITHUB_WORKSPACE/Makefile package/network/utils/iptables/Makefile
 
       - name: passwall
         run: |
@@ -45,8 +50,6 @@ jobs:
           rm -rf ./feeds/luci/applications/luci-app-passwall
           mv ./openwrt-passwall/luci-app-passwall ./feeds/luci/applications/luci-app-passwall
           rm -rf ./openwrt-passwall
-          rm -rf ./package/network/utils/iptables/Makefile
-          cp -f $GITHUB_WORKSPACE/Makefile package/network/utils/iptables/Makefile
 
       - name: build
         run: |
