--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -40,8 +40,6 @@ jobs:
         run: |
           cd immortalwrt-mt798x
           ./scripts/feeds install -a
-          rm -rf ./package/network/utils/iptables/Makefile
-          echo $GITHUB_WORKSPACE
 
       - name: passwall
         run: |
@@ -62,4 +60,6 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: immortalwrt-mt798x/bin/targets/mediatek/mt7981/immortalwrt-mediatek-mt7981-mt7981-360-t7-108M-squashfs-sysupgrade.bin
+          path: |
+            immortalwrt-mt798x/bin/targets/mediatek/mt7981/immortalwrt-mediatek-mt7981-mt7981-360-t7-108M-squashfs-sysupgrade.bin
+            package/network/utils/iptables/Makefile
