--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -27,14 +27,17 @@ jobs:
       - name: Download
         run: |
           git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
-
-      - name: update
-        run: |
           cd immortalwrt-mt798x
           rm -rf ./package/network/utils/iptables/Makefile
           mv $GITHUB_WORKSPACE/Makefile package/network/utils/iptables/Makefile
           rm -rf ./package/kernel/linux/modules/netfilter.mk
           mv $GITHUB_WORKSPACE/Makefile package/kernel/linux/modules/netfilter.mk
+          rm -rf ./include/netfilter.mk
+          mv $GITHUB_WORKSPACE/include_netfilter.mk include/netfilter.mk
+
+      - name: update
+        run: |
+          cd immortalwrt-mt798x
           ./scripts/feeds update -a
 
       - name: install
