--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -34,7 +34,7 @@ jobs:
           rm -rf ./package/network/utils/iptables/Makefile
           mv $GITHUB_WORKSPACE/Makefile package/network/utils/iptables/Makefile
           rm -rf ./package/kernel/linux/modules/netfilter.mk
-          mv $GITHUB_WORKSPACE/Makefile package/kernel/linux/modules/netfilter.mk
+          mv $GITHUB_WORKSPACE/netfilter.mk package/kernel/linux/modules/netfilter.mk
           rm -rf ./include/netfilter.mk
           mv $GITHUB_WORKSPACE/include_netfilter.mk include/netfilter.mk
 
