--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           git clone --depth=1 https://github.com/hanwckf/immortalwrt-mt798x.git
 
-      - name: installsocket
+      - name: socket
         run: |
           cd immortalwrt-mt798x
           rm -rf ./package/network/utils/iptables/Makefile
@@ -53,6 +53,8 @@ jobs:
           rm -rf ./feeds/luci/applications/luci-app-passwall
           mv ./openwrt-passwall/luci-app-passwall ./feeds/luci/applications/luci-app-passwall
           rm -rf ./openwrt-passwall
+          git clone https://github.com/xiaorouji/openwrt-passwall-packages package/openwrt-passwall-packages
+          rm -rf ./package/openwrt-passwall-packages/.git && rm -rf ./package/openwrt-passwall-packages/.github && rm -rf ./package/openwrt-passwall-packages/brook && rm -rf ./package/openwrt-passwall-packages/dns2socks && rm -rf ./package/openwrt-passwall-packages/dns2tcp && rm -rf ./package/openwrt-passwall-packages/hysteria && rm -rf ./package/openwrt-passwall-packages/ipt2socks && rm -rf ./package/openwrt-passwall-packages/naiveproxy && rm -rf ./package/openwrt-passwall-packages/shadowsocks-rust && rm -rf ./package/openwrt-passwall-packages/shadowsocksr-libev && rm -rf ./package/openwrt-passwall-packages/simple-obfs && rm -rf ./package/openwrt-passwall-packages/sing-box && rm -rf ./package/openwrt-passwall-packages/trojan && rm -rf ./package/openwrt-passwall-packages/trojan-go && rm -rf ./package/openwrt-passwall-packages/trojan-plus && && rm -rf ./package/openwrt-passwall-packages/tuic-client && && rm -rf ./package/openwrt-passwall-packages/v2ray-core && && rm -rf ./package/openwrt-passwall-packages/v2ray-plugin && && rm -rf ./package/openwrt-passwall-packages/xray-core && && rm -rf ./package/openwrt-passwall-packages/xray-plugin && && rm -rf ./package/openwrt-passwall-packages/v2ray-geoip && && rm -rf ./package/openwrt-passwall-packages/v2ray-geosite
 
       - name: build
         run: |
