--- a/.github/workflows/buildpw.yml
+++ b/.github/workflows/buildpw.yml
@@ -38,7 +38,7 @@ jobs:
           rm -rf ./feeds/luci/applications/luci-app-passwall
           mv ./openwrt-passwall/luci-app-passwall ./feeds/luci/applications/luci-app-passwall
           rm -rf ./openwrt-passwall
-          git clone https://github.com/xiaorouji/openwrt-passwall-packages package/luci-app-passwall-packages
+          git clone -b main --single-branch https://github.com/xiaorouji/openwrt-passwall-packages package/luci-app-passwall-packages
           rm -rf ./package/luci-app-passwall-packages/.git && rm -rf ./package/luci-app-passwall-packages/.github 
           rm -rf ./feeds/packages/net/chinadns-ng && mv ./package/luci-app-passwall-packages/chinadns-ng ./feeds/packages/net/chinadns-ng
           rm -rf ./feeds/packages/devel/gn && mv ./package/luci-app-passwall-packages/gn ./feeds/packages/devel/gn
